[gd_scene load_steps=29 format=3 uid="uid://dvlviqq51kj4u"]

[ext_resource type="Texture2D" uid="uid://0ft7s0ykasst" path="res://components/sprites/enemies/lich/lich_death_sphere_effect.png" id="1_bl10w"]
[ext_resource type="Script" uid="uid://0eb0ax8f8nv8" path="res://components/scripts/death_sphere_projectile.gd" id="1_fvn85"]
[ext_resource type="Texture2D" uid="uid://bkcg36ttdeanw" path="res://components/sprites/enemies/lich/lich_explosions_effect.png" id="2_kswj7"]
[ext_resource type="Texture2D" uid="uid://bbvbfyd8d8w00" path="res://components/sprites/enemies/lich/lich_death_sphere_effect_spawn.png" id="2_lj2bq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mpusc"]
atlas = ExtResource("1_bl10w")
region = Rect2(0, 0, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k3bg"]
atlas = ExtResource("1_bl10w")
region = Rect2(1080, 0, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai0dx"]
atlas = ExtResource("1_bl10w")
region = Rect2(0, 1080, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjnqe"]
atlas = ExtResource("1_bl10w")
region = Rect2(1080, 1080, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_3evty"]
atlas = ExtResource("2_kswj7")
region = Rect2(0, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh7s6"]
atlas = ExtResource("2_kswj7")
region = Rect2(600, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_8okj3"]
atlas = ExtResource("2_kswj7")
region = Rect2(1200, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpxn3"]
atlas = ExtResource("2_kswj7")
region = Rect2(0, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_erxe2"]
atlas = ExtResource("2_kswj7")
region = Rect2(600, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq4pn"]
atlas = ExtResource("2_kswj7")
region = Rect2(1200, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_otr0c"]
atlas = ExtResource("2_kswj7")
region = Rect2(0, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v356"]
atlas = ExtResource("2_lj2bq")
region = Rect2(0, 0, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1qkj"]
atlas = ExtResource("2_lj2bq")
region = Rect2(1080, 0, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_0my1t"]
atlas = ExtResource("2_lj2bq")
region = Rect2(2160, 0, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhjjm"]
atlas = ExtResource("2_lj2bq")
region = Rect2(0, 1080, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqe8h"]
atlas = ExtResource("2_lj2bq")
region = Rect2(1080, 1080, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw1ps"]
atlas = ExtResource("2_lj2bq")
region = Rect2(2160, 1080, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcsyd"]
atlas = ExtResource("2_lj2bq")
region = Rect2(0, 2160, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikwu5"]
atlas = ExtResource("2_lj2bq")
region = Rect2(1080, 2160, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyhq1"]
atlas = ExtResource("2_lj2bq")
region = Rect2(2160, 2160, 1080, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_auhc4"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpusc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k3bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai0dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjnqe")
}],
"loop": true,
"name": &"effect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3evty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh7s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8okj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpxn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erxe2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq4pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otr0c")
}],
"loop": false,
"name": &"impact",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v356")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1qkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0my1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhjjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqe8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw1ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcsyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikwu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyhq1")
}],
"loop": false,
"name": &"spawn",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l4qwa"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bclj2"]
radius = 25.2211

[sub_resource type="CircleShape2D" id="CircleShape2D_yplq5"]
radius = 105.262

[node name="DeathSphereProjectile" type="CharacterBody2D"]
process_mode = 1
z_index = 3
scale = Vector2(2.3, 2.3)
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_fvn85")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(0.11, 0.11)
sprite_frames = SubResource("SpriteFrames_auhc4")
animation = &"spawn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(33, 0)
rotation = 1.5708
shape = SubResource("CircleShape2D_l4qwa")
disabled = true

[node name="Time_to_live" type="Timer" parent="."]
wait_time = 13.0
one_shot = true
autostart = true

[node name="Area_to_impact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_to_impact"]
z_index = 1
shape = SubResource("CircleShape2D_bclj2")
debug_color = Color(0.862745, 0.133333, 0.133333, 0.0666667)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_yplq5")
disabled = true
debug_color = Color(0.996078, 0, 0, 0)

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="timeout" from="Time_to_live" to="." method="_on_time_to_live_timeout"]
[connection signal="body_entered" from="Area_to_impact" to="." method="_on_area_to_impact_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
